--- a/app/src/main/res/layout/row_exam_item.xml
+++ b/app/src/main/res/layout/row_exam_item.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -8,9 +10,21 @@
             type="com.ahmetbozkan.ehliyetcepte.data.model.exam.Exam" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/teal_200"
+        app:cardCornerRadius="4dp"
+        android:layout_margin="4dp">
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.appcompat.widget.AppCompatTextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@{exam.name}"
+            android:textColor="@color/black"
+            android:layout_margin="8dp"
+            android:textSize="16sp"
+            tools:text="2022 Deneme Sinavi" />
+
+    </com.google.android.material.card.MaterialCardView>
 </layout>
