--- a/app/src/main/res/layout/row_exam_item.xml
+++ b/app/src/main/res/layout/row_exam_item.xml
@@ -11,6 +11,7 @@
     </data>
 
     <com.google.android.material.card.MaterialCardView
+        android:id="@+id/card_view_exam_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/teal_200"
