--- a/app/src/main/res/layout/fragment_result.xml
+++ b/app/src/main/res/layout/fragment_result.xml
@@ -56,5 +56,14 @@
             app:layout_constraintTop_toBottomOf="@id/tv_wrong"
             tools:text="score: " />
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rcv_result"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginEnd="24dp"
+            app:layout_constraintTop_toBottomOf="@id/tv_score" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
