Fragment for displaying question results created & some of the fields handled

--- a/app/src/main/res/layout/row_result_item.xml
+++ b/app/src/main/res/layout/row_result_item.xml
@@ -51,7 +51,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:textSize="16sp"
-            tools:src="@drawable/ic_display"
+            android:src="@drawable/ic_display"
             android:tint="@color/black"
             android:textColor="@color/black"
             android:layout_weight="0.5"/>
