--- a/app/src/main/res/layout/fragment_solve_exam.xml
+++ b/app/src/main/res/layout/fragment_solve_exam.xml
@@ -63,28 +63,28 @@
             android:layout_marginTop="24dp"
             app:layout_constraintTop_toBottomOf="@id/tv_question">
 
-            <RadioButton
+            <androidx.appcompat.widget.AppCompatRadioButton
                 android:id="@+id/rbutton_option1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:tag="A"
                 tools:text="A) Option 1" />
 
-            <RadioButton
+            <androidx.appcompat.widget.AppCompatRadioButton
                 android:id="@+id/rbutton_option2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:tag="B"
                 tools:text="B) Option 1" />
 
-            <RadioButton
+            <androidx.appcompat.widget.AppCompatRadioButton
                 android:id="@+id/rbutton_option3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:tag="C"
                 tools:text="C) Option 1" />
 
-            <RadioButton
+            <androidx.appcompat.widget.AppCompatRadioButton
                 android:id="@+id/rbutton_option4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
