--- a/app/src/main/res/layout/fragment_solve_exam.xml
+++ b/app/src/main/res/layout/fragment_solve_exam.xml
@@ -121,5 +121,16 @@
             app:layout_constraintTop_toBottomOf="@id/rgroup_options"
             app:tint="@color/black" />
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rcv_question_navigator"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="8dp"
+            android:layout_marginTop="8dp"
+            android:orientation="horizontal"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintTop_toBottomOf="@id/btn_end_exam"
+            tools:listitem="@layout/row_question_navigator_item" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
