--- a/app/src/main/res/layout/fragment_landing.xml
+++ b/app/src/main/res/layout/fragment_landing.xml
@@ -20,5 +20,13 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_scoreboard"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="sonuclar"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/btn_open_pilot_exams" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
