--- a/app/src/main/res/layout/fragment_solve_exam.xml
+++ b/app/src/main/res/layout/fragment_solve_exam.xml
@@ -49,10 +49,14 @@
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/img_question"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
-            tools:src="@drawable/ic_image_placeholder"
+            android:layout_height="wrap_content"
+            android:maxHeight="250dp"
+            android:minHeight="200dp"
             android:scaleType="fitXY"
-            app:layout_constraintTop_toBottomOf="@id/tv_exam_name" />
+            android:visibility="gone"
+            app:layout_constraintTop_toBottomOf="@id/tv_exam_name"
+            tools:src="@drawable/ic_image_placeholder"
+            tools:visibility="visible" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tv_question"
