--- a/app/src/main/res/layout/fragment_solve_exam.xml
+++ b/app/src/main/res/layout/fragment_solve_exam.xml
@@ -46,6 +46,18 @@
             app:layout_constraintStart_toStartOf="@id/tv_exam_name"
             app:layout_constraintTop_toTopOf="@id/tv_exam_name" />
 
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tv_exam_index"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:textColor="@color/black"
+            android:textSize="14sp"
+            app:layout_constraintBottom_toBottomOf="@id/tv_exam_name"
+            app:layout_constraintEnd_toEndOf="@id/tv_exam_name"
+            app:layout_constraintTop_toTopOf="@id/tv_exam_name"
+            tools:text="4/20" />
+
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/img_question"
             android:layout_width="match_parent"
