--- a/app/src/main/res/layout/fragment_landing.xml
+++ b/app/src/main/res/layout/fragment_landing.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".ui.landing.LandingFragment">
 
@@ -8,25 +7,28 @@
 
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_open_pilot_exams"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="deneme sınavları"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:text="deneme sınavları" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_scoreboard"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="sonuclar"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/btn_open_pilot_exams" />
+            android:text="sonuclar" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_wrong_questions"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="yanlis sorular" />
+
+    </LinearLayout>
 </layout>
