--- a/app/src/main/res/layout/fragment_solve_wrong_questions.xml
+++ b/app/src/main/res/layout/fragment_solve_wrong_questions.xml
@@ -86,9 +86,11 @@
             android:layout_height="45dp"
             android:layout_marginTop="16dp"
             android:src="@drawable/ic_arrow_forward"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/rgroup_options"
-            app:tint="@color/black" />
+            app:tint="@color/black"
+            tools:visibility="visible" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
