--- a/app/src/main/res/layout/dialog_fragment_multi_selection.xml
+++ b/app/src/main/res/layout/dialog_fragment_multi_selection.xml
@@ -92,6 +92,7 @@
                 android:text="@{model.leftButtonText}"
                 app:cornerRadius="8dp"
                 app:isVisible="@{model.leftButtonVisible}"
+                app:gone="@{true}"
                 app:layout_constraintBottom_toBottomOf="@id/btn_right_button"
                 app:layout_constraintEnd_toStartOf="@+id/btn_right_button"
                 app:layout_constraintHorizontal_bias="0.5"
