--- a/app/src/main/res/layout/fragment_landing.xml
+++ b/app/src/main/res/layout/fragment_landing.xml
@@ -30,5 +30,11 @@
             android:layout_height="wrap_content"
             android:text="yanlis sorular" />
 
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_vehicle_gauges"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="araç gösterge paneli" />
+
     </LinearLayout>
 </layout>
