Revised parsingJsonDataToList method to make it generic, getAll func implemented for VehicleGauges

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -100,6 +100,6 @@
         tools:layout="@layout/fragment_solve_wrong_questions" />
     <fragment
         android:id="@+id/vehicleGaugesFragment"
-        android:name="com.ahmetbozkan.ehliyetcepte.ui.countdown.VehicleGaugesFragment"
+        android:name="com.ahmetbozkan.ehliyetcepte.ui.vehiclegauges.VehicleGaugesFragment"
         android:label="VehicleGaugesFragment" />
 </navigation>
